# sot_test

sot_test/: CMakeLists.txt  main.cpp
sot_test/include/: bsnn_sot_tracker.h  bsnn_user_api.h  easylogging++.h
sot_test/src/: bsnn_sot_tracker.cpp  easylogging++.cc
